--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+<!-- CSIS313 Page-->
+
 <html>
 	<head>
 		<title></title>
@@ -9,72 +12,90 @@
 		<div class="container">
 
 			<!--Navigation bar starts here-->
-			<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-			  <a class="navbar-brand" href="#">Navbar</a>
-			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			  <a class="navbar-brand" href="#">Clever Girls Paint</a>
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			  </button>
-
-			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-			    <ul class="navbar-nav mr-auto">
-			      <li class="nav-item active">
-			        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="#">Link</a>
-			      </li>
-			      <li class="nav-item dropdown">
-			        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			          Dropdown
-			        </a>
-			        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-			          <a class="dropdown-item" href="#">Action</a>
-			          <a class="dropdown-item" href="#">Another action</a>
-			          <div class="dropdown-divider"></div>
-			          <a class="dropdown-item" href="#">Something else here</a>
-			        </div>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link disabled" href="#">Disabled</a>
-			      </li>
-			    </ul>
-			    <form class="form-inline my-2 my-lg-0">
-			      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-			      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-			    </form>
+			  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			    <div class="navbar-nav">
+			      <a class="nav-item nav-link active" href="#">CSIS313</a>
+			      <a class="nav-item nav-link" href="#">About</a>
+			      <a class="nav-item nav-link" href="#">Contact</a>
+			      <a class="nav-item nav-link" href="#">Artwork</a>
+			      <a class="nav-item nav-link" href="#">Writings</a>
+			      <a class="nav-item nav-link" href="#">Tech</a>
+			    </div>
 			  </div>
 			</nav>
-			<!--Navigation bar ends here-->
 
-			<!--Jumbotron example, remove start and end comments to view-->
+<nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
+          <ul class="nav nav-pills flex-column">
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.etsy.com/shop/CleverGirlsPaint">Shop </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.instagram.com/clevergirlspaint/">Art </a>
+            </li>
+           
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.youtube.com/channel/UCtes9JXdfJcoZb_5O5273HQ">YouTube</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://medium.com/@sredna.kunowski">Writing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Tech</a>
+            </li>
+          </ul>
+          <img src="images/profile-pic.jpg">
+			<p> 
+				Hi! I'm Sredna Kunowski, the creator behind Clever Girls Paint. I'm originally from Maryland & California and have now settled down in North Dakota.  
 
-			<!--start
-			<div class="jumbotron">
-			  <h1 class="display-4">Hello, world!</h1>
-			  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-			  <hr class="my-4">
-			  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-			  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-			</div>
-	
-			end-->
+				I'm a senior at NDSU finishing up my B.A. in Computer Science. After working as a full stack dev intern, I decided to pursue my other interests. I have always been a creative soul and thrive on creating art and writing. 
 
-			<!--Button examples, remove start and end comments to view-->
+				In my free time, I am working on building up my art portfolio as well as working on my first children's book. In the art world I create illustrations, paintings, and jewelry. For writing, I create poems, stories, plays, essays, and personal blogs.
 
-			<!-- start
-			<button type="button" class="btn btn-primary">Primary</button>
-			<button type="button" class="btn btn-secondary">Secondary</button>
-			<button type="button" class="btn btn-success">Success</button>
-			<button type="button" class="btn btn-danger">Danger</button>
-			<button type="button" class="btn btn-warning">Warning</button>
-			<button type="button" class="btn btn-info">Info</button>
-			<button type="button" class="btn btn-light">Light</button>
-			<button type="button" class="btn btn-dark">Dark</button>
 
-			<button type="button" class="btn btn-link">Link</button>
-			end-->
+			</p>
 
-			</div>
+			<table>
+				weekly class schedule
+			</table>
+
+			<h3>Shows</h3>
+			<ul>
+				<li>Downton Abbey</li>
+				<li>The Witcher</li>
+				<li>Any Cooking Show</li>
+				<li>Tucca and Berti</li>
+				<li>Terra Nova</li>
+			</ul>
+			<h3>Games</h3>
+			<ul>
+				<li>Witcher 3</li>
+				<li>Horizon Zero Dawn</li>
+				<li>Ark</li>
+				<li>Crisis Core</li>
+			</ul>
+			<h3>Books</h3>
+			<ul>
+				<li>Everything by Jeaniene Frost</li>
+				<li>Everything by Ronald Dahl</li>
+				<li>Classic Fairytale Treasury</li>
+				<li>The Giving Tree by Shel Silverstein</li>
+			</ul>
+
+			<h3>Hobbies</h3>
+			<ol>
+				<li>Drawing/Painting</li>
+				<li>Reading/Writing</li>
+				<li>Gaming</li>
+				<li>Playing Piano</li>
+				<li>Going to concerts</li>
+			</ol>
+
+			</div> <!--end of container-->
 
 
 
