--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 
-<!-- CSIS313 Page-->
-
 <html>
 	<head>
 		<title></title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>	
+		<div class="container">
 		<div class="container">
 
 			<!--Navigation bar starts here-->
@@ -19,8 +18,7 @@
 			  </button>
 			  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			    <div class="navbar-nav">
-			      <a class="nav-item nav-link active" href="#">CSIS313</a>
-			      <a class="nav-item nav-link" href="#">About</a>
+			      <a class="nav-item nav-link active" href="#">About</a>
 			      <a class="nav-item nav-link" href="#">Contact</a>
 			      <a class="nav-item nav-link" href="#">Artwork</a>
 			      <a class="nav-item nav-link" href="#">Writings</a>
@@ -28,27 +26,24 @@
 			    </div>
 			  </div>
 			</nav>
+		</div>
+
+		<div class="container icon-intro">
 
 <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link" href="https://www.etsy.com/shop/CleverGirlsPaint">Shop </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.instagram.com/clevergirlspaint/">Art </a>
+              <a class="nav-link icon" href="https://www.etsy.com/shop/CleverGirlsPaint"><img class="icon"src="images/Etsy_icon.png"></a>
             </li>
            
             <li class="nav-item">
-              <a class="nav-link" href="https://www.youtube.com/channel/UCtes9JXdfJcoZb_5O5273HQ">YouTube</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://medium.com/@sredna.kunowski">Writing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Tech</a>
+              <a class="nav-link" href="https://www.youtube.com/channel/UCtes9JXdfJcoZb_5O5273HQ"><img class="icon"src="images/YouTube_icon.png"></a>
             </li>
           </ul>
-          <img src="images/profile-pic.jpg">
+ </nav>
+
+<div class="intro">
+          <img src="images/profile-pic.jpg" alt="profile image of woman smiling with a comic book in her hand. The woman has tan skin and short dark brown curly hair" class=" profile-pic img-thumbnail rounded-circle">
 			<p> 
 				Hi! I'm Sredna Kunowski, the creator behind Clever Girls Paint. I'm originally from Maryland & California and have now settled down in North Dakota.  
 
@@ -58,7 +53,8 @@
 
 
 			</p>
-
+		</div>
+</div>
 			<table>
 				weekly class schedule
 			</table>
