profile pic is centered
working on centering intro paragraph

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 			</nav>
 		</div>
 
-		<div class="container icon-intro">
 
-<nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
+
+<!-- <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
               <a class="nav-link icon" href="https://www.etsy.com/shop/CleverGirlsPaint"><img class="icon"src="images/Etsy_icon.png"></a>
@@ -40,21 +40,24 @@
               <a class="nav-link" href="https://www.youtube.com/channel/UCtes9JXdfJcoZb_5O5273HQ"><img class="icon"src="images/YouTube_icon.png"></a>
             </li>
           </ul>
- </nav>
+ </nav> -->
 
-<div class="intro">
+<div class="intro text-center">
           <img src="images/profile-pic.jpg" alt="profile image of woman smiling with a comic book in her hand. The woman has tan skin and short dark brown curly hair" class=" profile-pic img-thumbnail rounded-circle">
-			<p> 
+			<p class="intro-p "> 
 				Hi! I'm Sredna Kunowski, the creator behind Clever Girls Paint. I'm originally from Maryland & California and have now settled down in North Dakota.  
+			</p>
+			<p class="intro-p">
 
 				I'm a senior at NDSU finishing up my B.A. in Computer Science. After working as a full stack dev intern, I decided to pursue my other interests. I have always been a creative soul and thrive on creating art and writing. 
+			</p>
+			<p class="intro-p">
 
 				In my free time, I am working on building up my art portfolio as well as working on my first children's book. In the art world I create illustrations, paintings, and jewelry. For writing, I create poems, stories, plays, essays, and personal blogs.
 
-
 			</p>
 		</div>
-</div>
+
 			<table>
 				weekly class schedule
 			</table>
