--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="container">
 
 			<!--Navigation bar starts here-->
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<nav class="navbar navbar-expand-lg navbar-light bg-light top-bar">
 			  <a class="navbar-brand" href="#">Clever Girls Paint</a>
 			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
@@ -42,8 +42,9 @@
           </ul>
  </nav> -->
 
-<div class="intro text-center">
+<div class="intro">
           <img src="images/profile-pic.jpg" alt="profile image of woman smiling with a comic book in her hand. The woman has tan skin and short dark brown curly hair" class=" profile-pic img-thumbnail rounded-circle">
+         
 			<p class="intro-p "> 
 				Hi! I'm Sredna Kunowski, the creator behind Clever Girls Paint. I'm originally from Maryland & California and have now settled down in North Dakota.  
 			</p>
@@ -56,6 +57,7 @@
 				In my free time, I am working on building up my art portfolio as well as working on my first children's book. In the art world I create illustrations, paintings, and jewelry. For writing, I create poems, stories, plays, essays, and personal blogs.
 
 			</p>
+
 		</div>
 
 			<table>
