general page layout added

--- a/writing.html
+++ b/writing.html
@@ -16,9 +16,9 @@
 		        </button>
 		    <div class="collapse navbar-collapse" id="navbarResponsive">
 		      <ul class="navbar-nav ml-auto">
-		        <li class="nav-item active">
-		          <a class="nav-link">Home
-		                <span class="sr-only">(current)</span>
+		        <li class="nav-item">
+		          <a class="nav-link" href="index.html">Home
+		               
 		              </a>
 		        </li>
 		        <li class="nav-item">
@@ -27,8 +27,10 @@
 		        <li class="nav-item">
 		          <a class="nav-link" href="art.html">Art</a>
 		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="writing.html">Writing</a>
+		        <li class="nav-item" active>
+		          <a class="nav-link" href="writing.html">Writing
+		          	 <span class="sr-only">(current)</span>
+		          </a>
 		        </li>
 		        <li class="nav-item">
 		          <a class="nav-link" href="tech.html">Tech</a>
