--- a/art.html
+++ b/art.html
@@ -16,16 +16,18 @@
 		        </button>
 		    <div class="collapse navbar-collapse" id="navbarResponsive">
 		      <ul class="navbar-nav ml-auto">
-		        <li class="nav-item active">
-		          <a class="nav-link">Home
-		                <span class="sr-only">(current)</span>
+		        <li class="nav-item">
+		          <a class="nav-link" href="index.html">Home
+		                
 		              </a>
 		        </li>
 		        <li class="nav-item">
 		          <a class="nav-link" href="about.html">About</a>
 		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="art.html">Art</a>
+		        <li class="nav-item active">
+		          <a class="nav-link" href="art.html">Art
+		          	<span class="sr-only">(current)</span>
+		          </a>
 		        </li>
 		        <li class="nav-item">
 		          <a class="nav-link" href="writing.html">Writing</a>
