--- a/main-page.html
+++ b/main-page.html
@@ -10,14 +10,14 @@
 		<!-- Navigation -->
 		<nav class="navigation navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
 		  <div class="container">
-		    <a class="navbar-brand" href="index.html">Clever Girls Paint</a>
+		    <a class="navbar-brand" href="#">Clever Girls Paint</a>
 		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 		          <span class="navbar-toggler-icon"></span>
 		        </button>
 		    <div class="collapse navbar-collapse" id="navbarResponsive">
 		      <ul class="navbar-nav ml-auto">
 		        <li class="nav-item active">
-		          <a class="nav-link">Home
+		          <a class="nav-link" href="index.html">Home
 		                <span class="sr-only">(current)</span>
 		              </a>
 		        </li>
