--- a/tech.html
+++ b/tech.html
@@ -16,9 +16,9 @@
 		        </button>
 		    <div class="collapse navbar-collapse" id="navbarResponsive">
 		      <ul class="navbar-nav ml-auto">
-		        <li class="nav-item active">
-		          <a class="nav-link">Home
-		                <span class="sr-only">(current)</span>
+		        <li class="nav-item">
+		          <a class="nav-link" href="index.html">Home
+		                
 		              </a>
 		        </li>
 		        <li class="nav-item">
@@ -30,8 +30,10 @@
 		        <li class="nav-item">
 		          <a class="nav-link" href="writing.html">Writing</a>
 		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="tech.html">Tech</a>
+		        <li class="nav-item" active>
+		          <a class="nav-link" href="tech.html">Tech
+		          	<span class="sr-only">(current)</span>
+		          </a>
 		        </li>
 		      </ul>
 		    </div>
