--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 		        </button>
 		    <div class="collapse navbar-collapse" id="navbarResponsive">
 		      <ul class="navbar-nav ml-auto">
-		        <li class="nav-item active">
-		          <a class="nav-link">Home
+		      	<li class="nav-item active">
+		          <a class="nav-link" href="#">Interests
 		                <span class="sr-only">(current)</span>
 		              </a>
+		        </li>
+		        <li class="nav-item">
+		          <a class="nav-link" href="home.html">Schedule</a>
 		        </li>
 		        <li class="nav-item">
 		          <a class="nav-link" href="about.html">About</a>
@@ -39,26 +42,53 @@
 		</nav>
 
 		<!-- Full Page Image Header with Vertically Centered Content -->
-		<header class="masthead">
-		  <div class="container h-100">
+		<header class="center-page">
+		  <div class="intro-parent container">
 		    <div class="row h-100 align-items-center">
-		      <div class="col-12 text-center">
-		        <h1 class="font-weight-light">Vertically Centered Masthead Content</h1>
-		        <p class="lead">A great starter layout for a landing page</p>
-		      </div>
+		      <div class="col-8 intro rounded">
+		        <!--list of stuff-->
+
+		        <h3>Things I enjoy</h3>
+
+			<h4>Shows</h4>
+			<ul>
+				<li>Downton Abbey</li>
+				<li>The Witcher</li>
+				<li>Gravity Falls</li>
+			</ul>
+			<h4>Books</h4>
+			<ul>
+				<li>The Little Match Girl</li>
+				<li>The Thief of Always</li>
+				<li>The Witches</li>
+			</ul>
+
+			<h4>Hobbies</h4>
+			<ol>
+				<li>Drawing</li>
+				<li>Reading</li>
+				<li>Gaming</li>
+			</ol>
+
+
+
+
+		
 		    </div>
 		  </div>
 		</header>
 
-		<!-- Page Content -->
+
+
+
+
+		<!-- Footer -->
 		<section class="py-5 bottom-content">
-		  <div class="container">
-		    <h2 class="font-weight-light">Page Content</h2>
-		    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus ab nulla dolorum autem nisi officiis blanditiis voluptatem hic, assumenda aspernatur facere ipsam nemo ratione cumque magnam enim fugiat reprehenderit expedita.</p>
+		  <div class="container text-center ">
+		    <a target="_blank" href="https://www.etsy.com"><img class="icon" src="images/Etsy_Icon.png"></a>
+		    <a target="_blank" href="https://www.youtube.com/"><img class="icon" src="images/YouTube_Icon.png"></a>
 		  </div>
 		</section>
-
-
 		
 			<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
