--- a/writing.html
+++ b/writing.html
@@ -15,7 +15,10 @@
 		          <span class="navbar-toggler-icon"></span>
 		        </button>
 		    <div class="collapse navbar-collapse" id="navbarResponsive">
-		      <ul class="navbar-nav ml-auto">
+		      <ul class="navbar-nav ml-auto">		      	
+		      	<li class="nav-item">
+		           <a class="nav-link" href="index.html">CSIS313</a>
+		        </li>
 		        <li class="nav-item">
 		          <a class="nav-link" href="index.html">Home
 		               
@@ -28,7 +31,7 @@
 		          <a class="nav-link" href="art.html">Art</a>
 		        </li>
 		        <li class="nav-item" active>
-		          <a class="nav-link" href="writing.html">Writing
+		          <a class="nav-link" href="#">Writing
 		          	 <span class="sr-only">(current)</span>
 		          </a>
 		        </li>
@@ -41,22 +44,21 @@
 		</nav>
 
 		<!-- Full Page Image Header with Vertically Centered Content -->
-		<header class="masthead">
-		  <div class="container h-100">
-		    <div class="row h-100 align-items-center">
-		      <div class="col-12 text-center">
-		        <h1 class="font-weight-light">Vertically Centered Masthead Content</h1>
-		        <p class="lead">A great starter layout for a landing page</p>
+		<header class="center-page">
+		  <div class="intro-parent container">
+		    <div class="intro-parent2 row h-100 align-items-center">
+		      <div class="col-5 text-center intro rounded">
+				<p class="lead intro-p">UNDER CONSTRUCTION</p>
 		      </div>
 		    </div>
 		  </div>
 		</header>
 
-		<!-- Page Content -->
+		<!-- Footer -->
 		<section class="py-5 bottom-content">
-		  <div class="container">
-		    <h2 class="font-weight-light">Page Content</h2>
-		    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus ab nulla dolorum autem nisi officiis blanditiis voluptatem hic, assumenda aspernatur facere ipsam nemo ratione cumque magnam enim fugiat reprehenderit expedita.</p>
+		  <div class="container text-center ">
+		    <a target="_blank" href="https://www.etsy.com"><img class="icon" src="images/Etsy_Icon.png"></a>
+		    <a target="_blank" href="https://www.youtube.com/"><img class="icon" src="images/YouTube_Icon.png"></a>
 		  </div>
 		</section>
 
