--- a/about.html
+++ b/about.html
@@ -16,13 +16,16 @@
 		        </button>
 		    <div class="collapse navbar-collapse" id="navbarResponsive">
 		      <ul class="navbar-nav ml-auto">
+		      	<li class="nav-item">
+		           <a class="nav-link" href="index.html">Interests</a>
+		        </li>
 		        <li class="nav-item">
-		          <a class="nav-link" href="index.html">Home
+		          <a class="nav-link" href="home.html">Schedule
 		                
 		              </a>
 		        </li>
 		        <li class="nav-item active">
-		          <a class="nav-link" href="about.html">About
+		          <a class="nav-link" href="#">About
 		          	<span class="sr-only">(current)</span>
 		          </a>
 		        </li>
@@ -41,22 +44,22 @@
 		</nav>
 
 		<!-- Full Page Image Header with Vertically Centered Content -->
-		<header class="masthead">
-		  <div class="container h-100">
-		    <div class="row h-100 align-items-center">
-		      <div class="col-12 text-center intro">
+		<header class="center-page">
+		  <div class="intro-parent container">
+		    <div class="intro-parent2 row h-100 align-items-center">
+		      <div class="col-5 text-center intro rounded">
 		        <img  class=" profile-pic rounded-circle" src="images/bright-gurl.jpg" alt="profile image of woman smiling with a comic book in her hand. The woman has tan skin and short dark brown curly hair">
-		        <p class="lead intro-p">Hi, I'm Sredna, the creator behind Clever Girls Paint. I am an artist, writer, and all around techie. I attend NDSU as a Computer Science major, while also taking classes in creative writing, theatre, and art. </p>
+		        <p class="lead intro-p">Hi, I'm Sredna, the creator behind Clever Girls Paint. I am an artist, writer, and all around techie. I attend NDSU as a Computer Science major, while also taking classes in creative writing, theatre, and art. I am working on turning my love of art and writing into a career.</p>
 		      </div>
 		    </div>
 		  </div>
 		</header>
 
-		<!-- Page Content -->
+		<!-- Footer -->
 		<section class="py-5 bottom-content">
-		  <div class="container">
-		    <h2 class="font-weight-light">Page Content</h2>
-		    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus ab nulla dolorum autem nisi officiis blanditiis voluptatem hic, assumenda aspernatur facere ipsam nemo ratione cumque magnam enim fugiat reprehenderit expedita.</p>
+		  <div class="container text-center ">
+		    <a target="_blank" href="https://www.etsy.com"><img class="icon" src="images/Etsy_Icon.png"></a>
+		    <a target="_blank" href="https://www.youtube.com/"><img class="icon" src="images/YouTube_Icon.png"></a>
 		  </div>
 		</section>
 
