--- a/home.html
+++ b/home.html
@@ -15,13 +15,14 @@
 		          <span class="navbar-toggler-icon"></span>
 		        </button>
 		    <div class="collapse navbar-collapse" id="navbarResponsive">
-		      <ul class="navbar-nav ml-auto">		      	
+		      <ul class="navbar-nav ml-auto">
 		      	<li class="nav-item">
-		           <a class="nav-link" href="index.html">CSIS313</a>
+		           <a class="nav-link" href="index.html">Interests</a>
 		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="index.html">Home
-		                
+		        <li class="nav-item active">
+
+		          <a class="nav-link" href="#">Schedule
+		                <span class="sr-only">(current)</span>
 		              </a>
 		        </li>
 		        <li class="nav-item">
@@ -33,10 +34,8 @@
 		        <li class="nav-item">
 		          <a class="nav-link" href="writing.html">Writing</a>
 		        </li>
-		        <li class="nav-item" active>
-		          <a class="nav-link" href="#">Tech
-		          	<span class="sr-only">(current)</span>
-		          </a>
+		        <li class="nav-item">
+		          <a class="nav-link" href="tech.html">Tech</a>
 		        </li>
 		      </ul>
 		    </div>
@@ -47,12 +46,54 @@
 		<header class="center-page">
 		  <div class="intro-parent container">
 		    <div class="intro-parent2 row h-100 align-items-center">
-		      <div class="col-5 text-center intro rounded">
-				<p class="lead intro-p">UNDER CONSTRUCTION</p>
+		      <div class="col-8 text-center schedule">
+		        <table class="table table-dark">
+  <thead>
+    <tr>
+      <th scope="col">Times</th>
+      <th scope="col">Monday</th>
+      <th scope="col">Tuesday</th>
+      <th scope="col">Wednesday</th>
+      <th scope="col">Thursday</th>
+      <th scope="col">Friday</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">9:30-10:30am</th>
+      <td></td>
+      <td>Playwriting</td>
+      <td></td>
+      <td>Playwriting</td>
+      <td></td>
+    </tr>
+    <tr>
+      <th scope="row">1-2pm</th>
+      <td>Adv Soft Dev</td>
+      <td></td>
+      <td>Adv Soft Dev</td>
+      <td></td>
+      <td>Adv Soft Dev</td>
+    </tr>
+    <tr>
+      <th scope="row">2-3pm</th>
+      <td>Web Scripting</td>
+      <td></td>
+      <td>Web Scripting</td>
+      <td></td>
+      <td>Web Scripting</td>
+    </tr>
+  </tbody>
+</table>
+		      
 		      </div>
 		    </div>
 		  </div>
 		</header>
+
+
+
+
 
 		<!-- Footer -->
 		<section class="py-5 bottom-content">
