added illustration pic

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 		  <div class="intro-parent container">
 		    <div class="intro-parent2 row h-100 align-items-center">
 		      <div class="col-5 text-center intro rounded">
-		        <img  class=" profile-pic rounded-circle" src="images/bright-gurl.jpg" alt="profile image of woman smiling with a comic book in her hand. The woman has tan skin and short dark brown curly hair">
+		        <img  class=" profile-pic rounded-circle" src="images/selfi1.jpg" alt="profile image of woman smiling with a comic book in her hand. The woman has tan skin and short dark brown curly hair">
 		        <p class="lead intro-p">Hi, I'm Sredna, the creator behind Clever Girls Paint. I am an artist, writer, and all around techie. I attend NDSU as a Computer Science major, while also taking classes in creative writing, theatre, and art. I am working on turning my love of art and writing into a career.</p>
 		      </div>
 		    </div>
